新約原文字型加入

--- a/index.html
+++ b/index.html
@@ -2563,8 +2563,15 @@ var fhlLecture = (function () {
 					$(this).find('.verseContent').each(function (aa1, aa2) {
 						aa2.innerHTML = aa2.innerHTML.replace(/【(\d+)】/g, "<span class=ft ft=$1 ver='" + ver + "' chap=" + ps.chap + " engs='" + ps.engs + "'>【$1】</span>");
 					});
+
+          if ( ver == 'fhlwh')
+          {// 2016.10 snow, 新約原文,要套用字型 (剛剛好也是每個 .lec, 所以就搭注腳的forEach順風車)
+            $(a2).css('font-family', 'COBSGreekWeb');
+					}
 				});
 			}
+      
+			
 
 			that.registerEvents(ps);
 
@@ -3764,7 +3771,11 @@ var parsingPopUp={
 			background-position: center center;
 			cursor:pointer;
 		}
-	</style>
+    @font-face {
+      font-family: 'COBSGreekWeb';
+      src: url('font/COBSGreekWeb.ttf') format('truetype');
+    }
+  </style>
 </head>
 <body>
 <nav id="fhlTopMenu">
