希臘文字型不要再用, 因為tjm已經把api回傳成unicode

--- a/index.html
+++ b/index.html
@@ -2564,10 +2564,10 @@ var fhlLecture = (function () {
 						aa2.innerHTML = aa2.innerHTML.replace(/【(\d+)】/g, "<span class=ft ft=$1 ver='" + ver + "' chap=" + ps.chap + " engs='" + ps.engs + "'>【$1】</span>");
 					});
 
-          if ( ver == 'fhlwh')
-          {// 2016.10 snow, 新約原文,要套用字型 (剛剛好也是每個 .lec, 所以就搭注腳的forEach順風車)
-            $(a2).css('font-family', 'COBSGreekWeb');
-					}
+          //if ( ver == 'fhlwh')
+          //{// 2016.10 snow, 新約原文,要套用字型 (剛剛好也是每個 .lec, 所以就搭注腳的forEach順風車)
+          //  $(a2).css('font-family', 'COBSGreekWeb');
+		  //  		}
 				});
 			}
       
