拿掉 jquery, jquery有用不同版本,統一用1個. jqueryUI也會用到.也是一樣.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 		<meta property="og:site_name" content="FHL信望愛聖經工具"/>
 		<meta property="og:description" content="" />
 
+  <!-- 第3方函式庫, 統一 include, jquery/jqueryUI -->
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
+  <script src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 
 		<title>信望愛聖經工具</title>
 		<link rel="shortcut icon" href="images/FHLLOGO.ico" type="image/x-icon"/> 
@@ -20,10 +24,8 @@
 		<!--2015.09.02(三) snow add. React lib-->
 		<script src="libs/react/react-0.13.1.min.js"></script>
 		<script src="libs/react/react-with-addons-0.13.1.min.js"></script>
-		<script src="./libs/jquery-1.11.3.js"></script>
+		<!--<script src="./libs/jquery-1.11.3.js"></script>-->
 		<script src="./libs/xml2json.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
-		<script src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 		<script src="./libs/jquery.hotkeys.js"></script>
 		<script src="bible_audio_api/audiobible_api.js"></script>
 		<!-- 2015.09.24(四) snow add. obphp lib -->
@@ -63,7 +65,6 @@
 		<!--[if IE]>
 		<link rel="stylesheet" href="./libs/ie.css" type="text/css" media="screen, projection" />
 		<![endif]-->
-		<script src="https://code.jquery.com/jquery-migrate-1.2.1.js"></script>
 
 		<!--<script src="https://fb.me/react-0.13.3.min.js"></script>
 		<script src="https://fb.me/react-with-addons-0.13.3.min.js"></script>
