整理react react.addons沒用到. jsxtransformer也沒用到. 非min也沒用到

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 		<meta property="og:site_name" content="FHL信望愛聖經工具"/>
 		<meta property="og:description" content="" />
 
-  <!-- 第3方函式庫, 統一 include, jquery/jqueryUI -->
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
-  <script src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+    <!-- 第3方函式庫, 統一 include: jquery/jqueryUI, react-->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 
+		<script src="libs/react/react-0.13.1.min.js"></script>
+    
 		<title>信望愛聖經工具</title>
 		<link rel="shortcut icon" href="images/FHLLOGO.ico" type="image/x-icon"/> 
 
@@ -22,8 +24,7 @@
 		<link rel="stylesheet" href="./libs/icons/css/font-awesome.css" />
 
 		<!--2015.09.02(三) snow add. React lib-->
-		<script src="libs/react/react-0.13.1.min.js"></script>
-		<script src="libs/react/react-with-addons-0.13.1.min.js"></script>
+		<!--<script src="libs/react/react-with-addons-0.13.1.min.js"></script>-->
 		<!--<script src="./libs/jquery-1.11.3.js"></script>-->
 		<script src="./libs/xml2json.min.js"></script>
 		<script src="./libs/jquery.hotkeys.js"></script>
@@ -66,9 +67,6 @@
 		<link rel="stylesheet" href="./libs/ie.css" type="text/css" media="screen, projection" />
 		<![endif]-->
 
-		<!--<script src="https://fb.me/react-0.13.3.min.js"></script>
-		<script src="https://fb.me/react-with-addons-0.13.3.min.js"></script>
-		<script src="https://fb.me/JSXTransformer-0.13.3.js"></script>-->
 	<script src="fhlmap_api/fhlmap.js"></script>
 	<script src="fhlmap_api/fhlmap_main.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?signed_in=true&libraries=geometry&sensor=false"></script>
