整理linq linq資料夾有許多沒用到的. 還有包含其它程式語言才用到的. 都一併拿掉.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 		<meta property="og:site_name" content="FHL信望愛聖經工具"/>
 		<meta property="og:description" content="" />
 
-    <!-- 第3方函式庫, 統一 include: jquery/jqueryUI, react-->
+    <!-- 第3方函式庫, 統一 include: jquery/jqueryUI, react, linq, -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 
 		<script src="libs/react/react-0.13.1.min.js"></script>
+  
+    <script src="libs/linq.js_ver2.2.0.2/linq.min.js"></script>
+    <script src="libs/linq.js_ver2.2.0.2/jquery.linq.min.js"></script>
     
+  
 		<title>信望愛聖經工具</title>
 		<link rel="shortcut icon" href="images/FHLLOGO.ico" type="image/x-icon"/> 
 
@@ -36,8 +40,7 @@
 		<!--搜尋結果上色要用的 2015.10.29(四)-->
 		<script src="search_api/sephp.react.txt.txtSn.js"></script> 
 	 <!--Start of 搜尋功能-->
-		<script src="libs/linq.js_ver2.2.0.2/linq.min.js"></script>
-		<script src="libs/linq.js_ver2.2.0.2/jquery.linq.min.js"></script>
+		
 		<script src="search_api/abvphp_api.js"></script>
 		<script src="search_api/fhl_api.js"></script>
 		<!--<script src="preach_api/c_preach_frame.js"></script>--> <!--講道功能 被 preach_api 取代 react.js -->
